{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 129,
  "lineage": "88f88bf8-103a-b079-d163-81498a571d36",
  "resources": [
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-1",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d6256ed0f2061c",
            "arn": "arn:aws:ec2:ap-south-1:187343173708:instance/i-0a9e6855abc311175",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9e6855abc311175",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bca0b0b0e0060eb3",
            "private_dns": "ip-10-0-4-33.ap-south-1.compute.internal",
            "private_ip": "10.0.4.33",
            "public_ip": "52.66.56.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a74f7702eab2a7c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cce3e5a2adc43f0d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f5149efa8e35b3d"
            ]
          },
          "dependencies": [
            "module.ec2module.aws_security_group.private_security_group",
            "module.mymodule.aws_subnet.private-1",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-2",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d6256ed0f2061c",
            "arn": "arn:aws:ec2:ap-south-1:187343173708:instance/i-0f39f9c5dee499f7c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f39f9c5dee499f7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0639c711b639b92d9",
            "private_dns": "ip-10-0-5-202.ap-south-1.compute.internal",
            "private_ip": "10.0.5.202",
            "public_ip": "35.154.169.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a626da59d13e5f71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07918bdf3094c1610",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f5149efa8e35b3d"
            ]
          },
          "dependencies": [
            "module.ec2module.aws_security_group.private_security_group",
            "module.mymodule.aws_subnet.private-2",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-1",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d6256ed0f2061c",
            "arn": "arn:aws:ec2:ap-south-1:187343173708:instance/i-03a32fc7de8f9431c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a32fc7de8f9431c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be7d04e0461bee53",
            "private_dns": "ip-10-0-1-168.ap-south-1.compute.internal",
            "private_ip": "10.0.1.168",
            "public_ip": "13.233.112.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ac9f8d7f9dca247",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7e985b07ea5abd8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02cf9d0476f15e978"
            ]
          },
          "dependencies": [
            "module.ec2module.aws_security_group.ssh_http_Security_group",
            "module.mymodule.aws_subnet.public-1",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-2",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d6256ed0f2061c",
            "arn": "arn:aws:ec2:ap-south-1:187343173708:instance/i-06bb2b8f510d18357",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bb2b8f510d18357",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f10496a290633d02",
            "private_dns": "ip-10-0-2-117.ap-south-1.compute.internal",
            "private_ip": "10.0.2.117",
            "public_ip": "65.2.6.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1883e4532d48a65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0954336686df8ee46",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02cf9d0476f15e978"
            ]
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc",
            "module.ec2module.aws_security_group.ssh_http_Security_group",
            "module.mymodule.aws_subnet.public-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:security-group/sg-04f5149efa8e35b3d",
            "description": "Used in the terraform to access instancess ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f5149efa8e35b3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terrafrm_example",
            "name_prefix": "",
            "owner_id": "187343173708",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_Security_group",
      "provider": "module.ec2module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:security-group/sg-02cf9d0476f15e978",
            "description": "Used in the terraform to access instancess ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cf9d0476f15e978",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example",
            "name_prefix": "",
            "owner_id": "187343173708",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-1",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03bd5dfa5cdad4a1b",
            "domain": "vpc",
            "id": "eipalloc-04233d8399bb5b816",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08faebd6c46003a52",
            "private_dns": "ip-10-0-1-184.ap-south-1.compute.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-65-0-22-228.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.22.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-2",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0134e241a3a8fca69",
            "domain": "vpc",
            "id": "eipalloc-07e8e8e84853da7d6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-05e9d2572681a53f0",
            "private_dns": "ip-10-0-2-78.ap-south-1.compute.internal",
            "private_ip": "10.0.2.78",
            "public_dns": "ec2-13-126-122-242.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.122.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygateway",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:internet-gateway/igw-024bd0759636d3856",
            "id": "igw-024bd0759636d3856",
            "owner_id": "187343173708",
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04233d8399bb5b816",
            "connectivity_type": "public",
            "id": "nat-0854ddc8f10ed063b",
            "network_interface_id": "eni-08faebd6c46003a52",
            "private_ip": "10.0.1.184",
            "public_ip": "65.0.22.228",
            "subnet_id": "subnet-0d7e985b07ea5abd8"
          },
          "dependencies": [
            "module.mymodule.aws_eip.nat_eip-1",
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_subnet.public-1",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-2",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e8e8e84853da7d6",
            "connectivity_type": "public",
            "id": "nat-0d13d1672ffad32b9",
            "network_interface_id": "eni-05e9d2572681a53f0",
            "private_ip": "10.0.2.78",
            "public_ip": "13.126.122.242",
            "subnet_id": "subnet-0954336686df8ee46"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc",
            "module.mymodule.aws_eip.nat_eip-2",
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_subnet.public-2"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024bd0759636d3856",
            "id": "r-rtb-0f7b3f909cbf822d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7b3f909cbf822d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:route-table/rtb-0afe202e13cfdd4a8",
            "id": "rtb-0afe202e13cfdd4a8",
            "owner_id": "187343173708",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0854ddc8f10ed063b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc",
            "module.mymodule.aws_eip.nat_eip-1",
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_nat_gateway.nat-1",
            "module.mymodule.aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet-1",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c6fde5ae817546f",
            "route_table_id": "rtb-0afe202e13cfdd4a8",
            "subnet_id": "subnet-0cce3e5a2adc43f0d"
          },
          "dependencies": [
            "module.mymodule.aws_subnet.private-1",
            "module.mymodule.aws_subnet.public-1",
            "module.mymodule.aws_vpc.myvpc",
            "module.mymodule.aws_eip.nat_eip-1",
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_nat_gateway.nat-1",
            "module.mymodule.aws_route_table.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet-2",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08637ed46d07afc00",
            "route_table_id": "rtb-0afe202e13cfdd4a8",
            "subnet_id": "subnet-07918bdf3094c1610"
          },
          "dependencies": [
            "module.mymodule.aws_route_table.private_subnet",
            "module.mymodule.aws_subnet.private-2",
            "module.mymodule.aws_subnet.public-1",
            "module.mymodule.aws_vpc.myvpc",
            "module.mymodule.aws_eip.nat_eip-1",
            "module.mymodule.aws_internet_gateway.mygateway",
            "module.mymodule.aws_nat_gateway.nat-1"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:subnet/subnet-0cce3e5a2adc43f0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cce3e5a2adc43f0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187343173708",
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:subnet/subnet-07918bdf3094c1610",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-07918bdf3094c1610",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187343173708",
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:subnet/subnet-0d7e985b07ea5abd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d7e985b07ea5abd8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187343173708",
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:subnet/subnet-0954336686df8ee46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0954336686df8ee46",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187343173708",
            "vpc_id": "vpc-04b25cfff3d0e593d"
          },
          "dependencies": [
            "module.mymodule.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymodule",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "module.mymodule.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:187343173708:vpc/vpc-04b25cfff3d0e593d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020e1a1955c760545",
            "default_route_table_id": "rtb-0f7b3f909cbf822d1",
            "default_security_group_id": "sg-07cd5c5675dfcba69",
            "dhcp_options_id": "dopt-1484537f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04b25cfff3d0e593d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f7b3f909cbf822d1",
            "owner_id": "187343173708"
          }
        }
      ]
    }
  ]
}